--- a/Day 3/src/Main.css
+++ b/Day 3/src/Main.css
@@ -12,6 +12,7 @@
     background-color: #ffffff;
     border: 1px solid #ccc;
     padding: 20px;
+    border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     width: 300px;
   }
