--- a/Day 3/src/Main.css
+++ b/Day 3/src/Main.css
@@ -9,6 +9,7 @@
   }
   
   .login-container {
+    background-image: url("india1.jpg");
     background-color: #ffffff;
     border: 1px solid #ccc;
     padding: 20px;
